objects/Competitive_Info__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitive Info</relationshipLabel>
        <relationshipName>Competitive_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OLDCompetitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Info (Competitor)</relationshipLabel>
        <relationshipName>Competitive_Info1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Thru_Date__c</fullName>
        <label>Contract Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Info</relationshipLabel>
        <relationshipName>Competitive_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SolutionDNU__c</fullName>
        <label>SolutionDNU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solutions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Covered__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solutions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <label>Competitive Info</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Competitive Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>